# hub-training

./: .gitignore  gfhub-0.2.1-cp312-cp312-macosx_11_0_arm64.whl  gfhub-0.2.1-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  gfhub-0.2.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  gfhub-0.2.1-cp312-cp312-win_amd64.whl  gfhub-0.2.1-cp313-cp313-macosx_11_0_arm64.whl  gfhub-0.2.1-cp313-cp313-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  gfhub-0.2.1-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  gfhub-0.2.1-cp313-cp313-win_amd64.whl  main.py  pyproject.toml
basics/: 1_query_files.ipynb  2_upload_data.ipynb  3_add_function.ipynb  4_add_pipeline.ipynb
cutback/: .gitignore  1_generate_layout.ipynb  2_upload_data.ipynb  2_upload_measurement_data.ipynb  3_die_analysis.ipynb  4_wafer_analysis.ipynb  aggregate_die_analyses.py
resistance/: .gitignore  1_generate_layout.ipynb  2_upload_data.ipynb  3_device_analysis.ipynb  4_die_analysis.ipynb  5_wafer_analysis.ipynb  resistance.gds
rings/: .gitignore  1_generate_layout.ipynb  2_upload_data.ipynb  3_device_analysis.ipynb  4_die_analysis.ipynb  5_wafer_analysis.ipynb
scripts/: add_file.py  add_file.sh  add_pipeline.py  add_pipeline.sh
spirals/: .gitignore  1_generate_layout.ipynb  2_upload_data.ipynb  3_device_analysis.ipynb  4_die_analysis.ipynb  5_wafer_analysis_rib.ipynb  6_wafer_analysis_ridge.ipynb  layout.py  spirals_wafer_map.py
