[project]
name = "hub-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "gdsfactory>=9.25.2",
    "gfhub>=0.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[tool.uv]
find-links = ["."]

[tool.uv.sources]
gfhub = { path = "gfhub-0.2.1-cp312-cp312-win_amd64.whl" }
